<resources>
    <string name="app_name">Luxury_Wash</string>
    <string name="creator_name">by Edwin Sanabria</string>
    <string name="mensaje_bienvenida">¡Bienvenido a Luxury Wash! Tu vehículo limpio, sin complicaciones. Agenda tu lavado en un par de toques y relajate mientras hacemos la magia</string>
    <string name="saludo_luxury">Bienvenido a Luxury</string>
    <string name="solicitud_credenciales">Ingresa tus credenciales</string>
    <string name="solicita_correo">Ingresa tu correo</string>
    <string name="solicitud_password">Ingresa tu contraseña</string>
    <string name="olvidaste_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_inicio_sesion">Iniciar Sesión</string>
    <string name="iniciar_con_google">Iniciar Sesión con Google</string>
    <string name="tv_no_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registro">Registrate</string>
    <string name="doc_register">Ingresa tu número de documento</string>
    <string name="nom_register">Ingresa tus nombres</string>
    <string name="lastName_register">Ingresa tus apellidos</string>
    <string name="mail_register">Ingresa tu cuenta de correo</string>
    <string name="cel_register">Ingresa tu número de celular</string>
    <string name="password_register">Ingresa tu contraseña</string>
    <string name="conf_password_register">Confirma tu contraseña</string>
    <string name="btn_guardar">Guardar</string>
</resources>