<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_logo_splash"
        android:layout_width="286dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/tv_bienvenidos"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mensaje_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_splash" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="410dp"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:background="@color/cream"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/tv_bienvenidos"
        app:strokeColor="@color/black"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_saludo_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/saludo_luxury"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_bienvenidos" />

    <TextView
        android:id="@+id/solicitud_credenciales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/solicitud_credenciales"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saludo_home" />

    <EditText
        android:id="@+id/edt_email_home"
        style="@style/EditTextRounded"
        android:layout_width="256dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:hint="@string/solicita_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/solicitud_credenciales" />

    <EditText
        android:id="@+id/edt_password_home"
        style="@style/EditTextRounded"
        android:layout_width="256dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:hint="@string/solicitud_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_home" />

    <Button
        android:id="@+id/btn_inicio_sesion"
        android:layout_width="256dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/lightBlue"
        android:text="@string/btn_inicio_sesion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/btn_google_home"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/white"
        android:text="@string/iniciar_con_google"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/google_logo"
        app:iconSize="35dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_inicio_sesion"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="246dp"
        android:text="@string/olvidaste_password"
        android:textColor="@color/lightBlue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_back"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/tv_sin_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_no_cuenta"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google_home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_registro"
        android:textColor="@color/lightBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/tv_sin_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/btn_google_home" />
</androidx.constraintlayout.widget.ConstraintLayout>